--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "url-parse": "^1.5.1"
+  },
+  "engines": {
+    "node": "14.17.0"
   }
 }
