--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "node ace build --prod",
     "start": "node ace serve --watch",
-    "start:prod": "node ./build/server.js"
+    "start:prod": "node ./build/server.js",
+    "postbuild": "cp -a docs/ build/docs"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.2",
