--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,20 @@ PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=3H6Vu6M3UqsZL3ktdnflPGbw79Bg7wcr
-DB_CONNECTION=mysql
-SMTP_HOST=localhost
-SMTP_PORT=587
-SMTP_USERNAME=<username>
-SMTP_PASSWORD=<password>
+SMTP_HOST=<smpt_host>
+SMTP_PORT=<smpt_port>
+SMTP_USERNAME=<smpt_username>
+SMTP_PASSWORD=<smpt_port>
 CACHE_VIEWS=false
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=lucid
-PG_HOST=localhost
-PG_PORT=5432
-PG_USER=root
-PG_PASSWORD=
-PG_DB_NAME=lucid
+HASH_DRIVER=bcrypt
+DB_CONNECTION=mysql
+MYSQL_HOST=<mysql_host>
+MYSQL_PORT=<port>
+MYSQL_USER=<mysql_user>
+MYSQL_PASSWORD=<mysql_password>
+MYSQL_DB_NAME=<mysql_db_name>
+PG_HOST=<pg_host>
+PG_PORT=<port>
+PG_USER=<pg_user>
+PG_PASSWORD=<mysql_password>
+PG_DB_NAME=<pg_db_name>
